Use focused RenderWidgetHostImpl instead of TextInputManager::GetActiveWidget() to obtain TextSelection information.

TextInputManager::GetActiveWidget() should be exclusively used in
scenarios where <input> is focused as it returns the
RenderWidgetHostImpl corresponding to a RenderWidget which has a focused
<input>.

BUG=634148

Review-Url: https://codereview.chromium.org/2208093004
Cr-Commit-Position: refs/heads/master@{#410665}

Former-commit-id: 0b1041f656728be7aba9923c9ac21fd4448b0c15